<resources>
    <string name="app_name">Learning English</string>
    <string name="back">Back</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email"> Email</string>
    <string name="password">Password</string>
    <string name="LE">Hi  !\nWelcome to\nLearning English</string>
    <string name="EQ">English Quiz</string>
    <string name="CQ">Correct Word</string>
    <string name="start">Start</string>
    <string name="highscore">High Score</string>
    <string name="highscoreCR">High Score\nCorrect Word</string>
    <string name="highscoreEQ">High Score\nEnglish Quiz</string>
    <string name="tutorial">Tutorial</string>
    <string name="playername">What is your name?</string>
    <string name="username">Player Name</string>
    <string name="choose">Choose number of questions</string>
    <string name="question">Can you guess what is\nin the picture?</string>
    <string name="answer">Answer</string>
    <string name="result">Result</string>
    <string name="EQresult">Result Test</string>
    <string name="homepage">Homepage</string>
    <string name="help">50/50</string>
    <string name="skip">Skip</string>
    <string name="youranswer">Your Answer</string>
    <string name="guideplay">Guide</string>
    <string name="playagain">Play Again</string>
    <string name="end">X</string>
    <string name="ohno">You need to learn English from scatch!!!</string>
    <string name="logout">Logout</string>
    <string name="dictionary">Dictionary</string>
    <string name="title_activity_correct_word_test">correctWordTest</string>
    <string name="profile">Profile</string>
    <string name="leaderboard">Leaderboard</string>
</resources>