<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/custom_title"
        android:padding="16dp"
        android:text="@string/ohno"
        android:textAlignment="center"
        android:textColor="@color/medium_white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/PlayAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button_2"
        android:paddingVertical="12dp"
        android:paddingHorizontal="24dp"
        android:text="@string/playagain"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Back"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button_4"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>
