<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/End"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/custom_x"
        android:text="@string/end"
        android:textAllCaps="false"
        android:textColor="@color/medium_white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Question"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_title"
        android:text="@string/question"
        android:textAlignment="center"
        android:padding="2sp"
        android:textColor="@color/medium_white"
        android:textSize="25dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/QuestionPicture"
        android:layout_width="500dp"
        android:layout_height="150dp"
        android:layout_below="@id/Question"
        android:layout_gravity="center"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/QuestionPicture"
        android:layout_centerInParent="true"
        android:textSize="30dp"
        android:textStyle="bold"
        tools:text="00:30" />

    <GridLayout
        android:id="@+id/RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Time"
        android:rowCount="2"
        android:columnCount="2"
        android:padding="10dp"
        android:layout_margin="16dp">

        <RadioButton
            android:id="@+id/RdbA"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            android:button="@null"
            android:background="@drawable/custom_radiogroup"
            android:padding="20dp"
            android:text="A. "
            android:textSize="15dp"
            android:textColor="@color/medium_white"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/RdbB"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            android:button="@null"
            android:background="@drawable/custom_radiogroup"
            android:padding="20dp"
            android:text="B. "
            android:textSize="15dp"
            android:textColor="@color/medium_white"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/RdbC"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            android:button="@null"
            android:background="@drawable/custom_radiogroup"
            android:padding="20dp"
            android:text="C. "
            android:textSize="15dp"
            android:textColor="@color/medium_white"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/RdbD"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            android:button="@null"
            android:background="@drawable/custom_radiogroup"
            android:padding="20dp"
            android:text="D. "
            android:textSize="15dp"
            android:textColor="@color/medium_white"
            android:textStyle="bold" />

    </GridLayout>


    <Button
        android:id="@+id/Answer"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RadioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button_1"
        android:text="@string/answer"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Help"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Answer"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/custom_button_2"
        android:text="@string/help"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Skip"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Answer"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/Help"
        android:background="@drawable/custom_button_4"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Skip"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold" />
</RelativeLayout>
