<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".correctWordTest">

    <TextView
        android:id="@+id/Timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topBar"
        app:layout_constraintVertical_bias="0.139"
        tools:text="00:00" />

    <Button
        android:id="@+id/Answer"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="@string/answer"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Question" />

    <EditText
        android:id="@+id/Answerbox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Question"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:id="@+id/YourAnswer"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/Question"
        android:layout_marginStart="16dp"
        android:background="@drawable/custom_title"
        android:gravity="center"
        android:text="@string/youranswer"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Answer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Question"
        app:layout_constraintVertical_bias="0.506" />

    <TextView
        android:id="@+id/Question"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="128dp"
        android:gravity="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar" />

    <View
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/custom_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Back"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Back"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/white"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/topBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>